--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://cameo.breezy.hr/p/9aeb18b6bb10-social-media-manager-internship-contract'>Social Media Manager (Internship / Contract) at Cameo</a></h5> 
+<p><span class="badge badge-light">Los Angeles, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471653-seo-intern-fall-'>SmartRecruiters Inc SEO Intern (Fall) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -131,7 +135,7 @@
 <p><span class="badge badge-light">Bangkok Thailand</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451447-internship-product-management-video'>Bosch Group Internship Product Management Video | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451447-internship-product-management-video'>Bosch Group Internship Product Management Video | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -223,7 +227,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o3K89fwO&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nQr6nMw1'>Palo Alto Networks Careers - Intern - Code Quality Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o3K89fwO&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nQr6nMw1'>Palo Alto Networks Careers - Intern - Code Quality Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -299,7 +303,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ppnne/a9a5fdc1-2a2f-42b5-aa70-6f5dabe64d8c'>Planned Parenthood of Northern New England - Public Affairs Communications and Digital Intern Spring 2020 Colchester, VT</a></h5> 
+<h5><a href='https://jobs.lever.co/ppnne/a9a5fdc1-2a2f-42b5-aa70-6f5dabe64d8c'>Planned Parenthood of Northern New England - Public Affairs Communications and Digital Intern Spring 2020 Colchester, VT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -385,7 +389,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zynga/job/oJsmbfws'>Zynga Careers - Product Management Intern (Summer 2020)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zynga/job/oJsmbfws'>Zynga Careers - Product Management Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Francisco Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -409,7 +413,7 @@
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698403179-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698403179-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -441,7 +445,7 @@
 <p><span class="badge badge-light">Madison New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://solactive.join.com/jobs/467463-internship-m-f-d-indexing-research'>Job @ Solactive  (Frankfurt): Internship (m/f/d) I... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solactive.join.com/jobs/467463-internship-m-f-d-indexing-research'>Job @ Solactive  (Frankfurt): Internship (m/f/d) I... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -453,12 +457,6 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Cloud Operations Engineer - VMware. TechnologyHouston, Texas, United States
 Full timeCOE-HOU-041219. Posted 11 days ago?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/iland-internet-solutions-corporation/j/67C2CF29BD/'>Cloud Operations Engineer - VMware - iland Internet Solutions ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... iland is looking for an experienced Cloud Operations Engineer to help manage 
-all aspects of iland's cloud compute systems, including capacity planning, cluster
-?...</p>
 <hr/>
 
 
