--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191844-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191844-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Stratford, CT</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698100916-speech-language-pathologists'>Hearing and Speech Center of Florida Speech Language Pathologists | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698100916-speech-language-pathologists'>Hearing and Speech Center of Florida Speech Language Pathologists | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FLUnited States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -198,7 +198,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4486380002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4486380002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Conway, SC</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -261,7 +261,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://cdu.referrals.selectminds.com/jobs/lecturer-senior-lecturer-speech-language-therapy-321'>Lecturer/Senior Lecturer - Speech & Language Therapy - CDU Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdu.referrals.selectminds.com/jobs/lecturer-senior-lecturer-speech-language-therapy-321'>Lecturer/Senior Lecturer - Speech & Language Therapy - CDU Careers</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -309,7 +309,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Newark, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -349,7 +349,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
+<h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -447,7 +447,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696074702-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696074702-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
